[gd_scene load_steps=8 format=2]

[ext_resource path="res://textures/arrow.png" type="Texture" id=1]
[ext_resource path="res://textures/icon-trainee.png" type="Texture" id=2]
[ext_resource path="res://resources/tinierBold.tres" type="DynamicFont" id=3]
[ext_resource path="res://office/action_dialog.gd" type="Script" id=4]
[ext_resource path="res://scripts/SaveGameR.gd" type="Script" id=5]
[ext_resource path="res://resources/label_theme.tres" type="Theme" id=6]

[sub_resource type="Resource" id=1]
script = ExtResource( 5 )
coins = 400
ale = 400
slimes = 0
potions = 0
hp = 0
patrons = 3
turns = 1
brewers = 1
slime_density = 1.0
active_posts = [  ]

[node name="VBoxContainer" type="VBoxContainer"]
margin_right = 415.0
margin_bottom = 147.0
script = ExtResource( 4 )
save_game_override = SubResource( 1 )

[node name="OfficeAction" type="Button" parent="."]
margin_right = 210.0
margin_bottom = 22.0
size_flags_horizontal = 0
toggle_mode = true
text = "Train a new brewer"
icon = ExtResource( 2 )

[node name="Arrow" type="Sprite" parent="OfficeAction"]
modulate = Color( 0.666667, 0, 1, 1 )
position = Vector2( 426, 15 )
scale = Vector2( 0.6, 0.269123 )
texture = ExtResource( 1 )

[node name="Dialog_VBox" type="VBoxContainer" parent="."]
margin_top = 26.0
margin_right = 415.0
margin_bottom = 119.0

[node name="Title" type="Label" parent="Dialog_VBox"]
margin_right = 415.0
margin_bottom = 18.0
theme = ExtResource( 6 )
custom_fonts/font = ExtResource( 3 )
text = "Train a new brewer"

[node name="Larger" type="Label" parent="Dialog_VBox"]
margin_top = 22.0
margin_right = 415.0
margin_bottom = 38.0
theme = ExtResource( 6 )
text = "Additional batch per day"

[node name="Cost" type="Label" parent="Dialog_VBox"]
margin_top = 42.0
margin_right = 415.0
margin_bottom = 58.0
theme = ExtResource( 6 )
text = "Cost:"

[node name="Options" type="HBoxContainer" parent="Dialog_VBox"]
margin_top = 62.0
margin_right = 415.0
margin_bottom = 82.0

[node name="Ale100Btn" type="Button" parent="Dialog_VBox/Options"]
margin_right = 73.0
margin_bottom = 20.0
text = "100 ale"

[node name="Or" type="Label" parent="Dialog_VBox/Options"]
margin_left = 77.0
margin_top = 3.0
margin_right = 95.0
margin_bottom = 17.0
text = "or"

[node name="Coin100Btn" type="Button" parent="Dialog_VBox/Options"]
margin_left = 99.0
margin_right = 192.0
margin_bottom = 20.0
text = "100 coins"

[node name="HSeparator" type="HSeparator" parent="Dialog_VBox"]
margin_top = 86.0
margin_right = 415.0
margin_bottom = 93.0
custom_constants/separation = 7

[connection signal="toggled" from="OfficeAction" to="." method="_on_OfficeAction_toggled"]
